# OCDG

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  commit.py  config.py  data_access.py  docker-compose.yml  generate_diffs.sh  generate_diffs_groq.py  generate_diffs_nvidia.py  generate_diffs_only.py  git_repo.py  main.py  message_generation.py  pyproject.toml  retry_utils.py  temp_commit_msg.txt  test_ocdg.py  utils.py  v1_README.md  validate.sh
.github/workflows/: ci.yml
OCDG/: backup_manager.py  commit_history.py  llm_integration.py  main.py  utils.py
OCDG/backup/commit_diff/: config  packed-refs
OCDG2/: README.md  backup_manager.py  commit_history.py  commit_message_generator.py  llm_integration.py  main.py  repository_updater.py
clients/: __init__.py  base_client.py  groq_client.py  llm_integration.py  ollama_client.py  openai_client.py  replicate_client.py
