[tool.poetry]
name = "commit-diff"
version = "0.1.0"
description = "Commit Diff use opensource LLMs API (llama 3) to automatically generate insightful and informative commit messages from past for your Git repositories."
authors = ["octrow <octrow@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
langchain = "^0.1.17"
loguru = "^0.7.2"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
