[tool.poetry]
name = "commit-diff"
version = "0.1.0"
description = "Commit Diff use opensource LLMs API (llama 3) to automatically generate insightful and informative commit messages from past for your Git repositories."
authors = ["octrow <octrow@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
langchain = "^0.1.17"
loguru = "^0.7.2"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.4"
langchain-nvidia-ai-endpoints = "^0.0.12"
gitpython = "^3.1.43"
groq = "^0.8.0"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
