[tool.poetry]
name = "commit-diff"
version = "0.1.0"
description = "Commit Diff use opensource LLMs API (llama 3) to automatically generate insightful and informative commit messages from past for your Git repositories."
authors = ["octrow <octrow@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
langchain = "^0.1.17"
loguru = "^0.7.2"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.4"
langchain-nvidia-ai-endpoints = "^0.0.12"
gitpython = "^3.1.43"
groq = "^0.8.0"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
ollama = "^0.2.1"
jsonschema = "^4.22.0"
replicate = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
pre-commit = "^3.5.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
